@@ -27,7 +27,6 @@ const char * fallback_post_ui =
 "      <menuitem action='copy' />\n"
 "      <menuitem action='paste' />\n"
 "      <separator />\n"
-"      <menuitem action='rewrap' />\n"
 "      <menuitem action='wrap' />\n"
 "      <separator />\n"
 "      <menuitem action='spellcheck' />\n"
@@ -42,7 +41,6 @@ const char * fallback_post_ui =
 "    <toolitem action='save-draft' />\n"
 "    <toolitem action='open-draft' />\n"
 "    <separator />\n"
-"    <toolitem action='rewrap' />\n"
 "    <toolitem action='wrap' />\n"
 "    <separator />\n"
 "    <toolitem action='rot13' />\n"
