@@ -8,6 +8,8 @@
  405637 give the save button focus in the save dialog (Chris Petersen)
  360376 go to next unread-group should be circular (Frederic Crozat)
  406248 make it easier to find previously-read context (Jack Spaar)
+ 403762 pasted text isn't wrapped automatically (Artur Jachacy)
+ 121178 built-in editor wraps text improperly when composing (Carl Hudkins)
 
 0.123 "El Nuevo Barretto"
  404515 0.122 build problems in `po' (Pteer)
@@ -32,7 +34,6 @@
  401449 sort-by-author doesn't work properly (Charles Hill, Jason Mack)
  400814 unable to mark some groups as read (Christophe)
  402704 queue size too small in task-pane.cc (Shana)
- 403762 pasted text isn't wrapped automatically (Artur Jachacy)
  389817 article not shown if another DL in progress (Samuli Karkkainen)
  403076 focus is incorrect when returning to header pane (Walt)
  402743 add keyboard shortcuts in task window (Ulrich Binder)
